...
                    ? null
                    : 'Enter a valid email',
              ),
            if (login)
              AppField(
                'Password',
                hint: '********',
                controller: password,
                password: true,
                validator: (v) =>
                    (v?.isNotEmpty ?? false) ? null : 'Enter your password',
              ),
            if (signup || reset)
...
